[project]
name = "backdoor"
version = "1.0.0"
description = "Run Claude Code against any AI provider. DeepSeek, Groq, Ollama, OpenRouter — your call."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
